@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-10-26" />
+<meta name="date" content="2010-11-07" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-10-26</td></tr>
+<td>2010-11-07</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -1192,8 +1192,8 @@ before the selected text was copied to the new position.</p>
 <div class="section">
 <h3><a class="toc-backref" href="#id45" id="indentation" name="indentation">Indentation</a></h3>
 <p>Geany allows each document to indent either with a tab character or
-multiple spaces. The default indent mode is set in the <a class="reference" href="#editor-features-preferences">Editor Features
-preferences</a> (see the link for more information). But
+multiple spaces. The default indent mode is set in the <a class="reference" href="#editor-indentation-preferences">Editor
+Indentation preferences</a> (see the link for more information). But
 this can be overridden using either the <em>Document-&gt;Indent Type</em> menu,
 or by using the <em>Detect from file</em> indentation preference. When enabled,
 this scans each file that is opened and sets the indent mode based on
@@ -1209,6 +1209,8 @@ as follows:</p>
 <dd>Indent with tabs and spaces, depending on how much indentation is
 on a line.</dd>
 </dl>
+<p>Default indentation settings can also be overridden by projects -
+see <a class="reference" href="#project-management">Project Management</a>.</p>
 </div>
 <div class="section">
 <h3><a class="toc-backref" href="#id46" id="auto-indentation" name="auto-indentation">Auto-indentation</a></h3>
@@ -2673,6 +2675,7 @@ like a Python console (e.g. ipython). Use this with care.</dd>
 <p>Project Management is optional in Geany. Currently it can be used for:</p>
 <ul class="simple">
 <li>Storing and opening session files on a project basis.</li>
+<li>Overriding default settings with project equivalents.</li>
 <li>Configuring the Build menu on a project basis.</li>
 </ul>
 <p>A list of session files can be stored and opened with the project
@@ -2697,8 +2700,8 @@ structure contained in it.</p>
 </div>
 <div class="section">
 <h3><a class="toc-backref" href="#id125" id="project-properties" name="project-properties">Project Properties</a></h3>
-<p>You can set an optional description for the project, but it is not
-used elsewhere by Geany.</p>
+<p>You can set an optional description for the project. Currently it's
+only used for a template wildcard - see <a class="reference" href="#template-wildcards">Template wildcards</a>.</p>
 <p>The <em>Base path</em> field is used as the directory to run the Build menu commands.
 The specified path can be an absolute path or it is considered to be
 relative to the project's file name.</p>
@@ -6327,7 +6330,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-11-07 18:52 UTC.
+Generated on: 2010-11-08 16:09 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
