@@ -12,6 +12,8 @@
    used in a document.
  * data/filetypes.*, data/colorschemes/alt.conf:
    Rename word/word2 named styles to keyword/keyword2.
+ * doc/geany.txt, doc/geany.html:
+   Mention that indentation settings can be overridden per-project.
 
 
 2010-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
